--- a/assembly/assembly-wsmaster-war/src/main/webapp/WEB-INF/classes/che/che.properties
+++ b/assembly/assembly-wsmaster-war/src/main/webapp/WEB-INF/classes/che/che.properties
@@ -568,3 +568,9 @@ che.workspace.devfile.default_editor=eclipse/che-theia/next
 # eclipse/che-theia-exec-plugin/0.0.1,eclipse/che-theia-terminal-plugin/0.0.1,https://cdn.pluginregistry.com/vi-mode/meta.yaml
 # If the plugin is a URL, the plugin's meta.yaml is retrieved from that URL.
 che.workspace.devfile.default_editor.plugins=eclipse/che-machine-exec-plugin/nightly
+machine.backup.backup_script=/opt/codenvy-data/conf/rsyncbackup.sh
+machine.backup.restore_script=/opt/codenvy-data/conf/rsyncrestore.sh
+machine.backup.backup_duration_second=300
+machine.backup.restore_duration_second=300
+machine.backup.backup_period_second=360
+che.user.workspaces.storage=/projects
